
* Caching-related fixes for captcha refresh.

* Allow to override item tax calculation with tax value in $Items as tax rates may vary between items.

* Force scalar context for is_yes and is_no

* Replace broken check for Encode in [email] tag by looking at MINIVEND_DISABLE_UTF8 environment variable.

* Use proper content type for HTML only emails.

* Add link-target attribute to [menu] tag.

* Add tree-master attribute to [menu] tag.

* Fix cart title in standard's cart_display component.

* Fix displayed price on stock_alert_added page.

* Fix bug where hash keys are not properly escaped in uneval.

* Allow gift certificates to be counted correctly as one item by [nitems] tag.

Payment
-------

* Add HSBC payment module.

* Update Payflow payment module.

* Add Cardsave payment module.

* Pass through AllowNote parameter to PayPal.

* Fix handling of extra_query_params in Business::OnlinePayment wrapper.

* Fallback to credentials without sandbox_ prefix and fail properly if credentials are incomplete.

* Update to PaypalExpress 1.1.0, requires Date::Calc now.

* Update Worldpay payment module to version 1.0.2.

* Update credit card type detection.

Standard Demo
-------------

* Improved localization support for standard's receipt and order pages.

* Apply fixes and updates to German translation for standard store.

* Show test order link on standard's front page only if MV_DEMO_MODE is set.

* Enable UTF-8 in standard catalog.

* Add optional default for customer's country to standard's catalog.cfg.

* Remove PriceDivide from standard's locale database.

* Add DEFAULT_PAYMENT_MODE variable to standard's variable database.

Admin UI
--------

* Fix undeclared variables in meta editor admin page.

* Fix hardcoded path to order counter file in standard's log_transaction.

External tool support
---------------------

* Added jEdit support for [PREFIX-calc] blocks, now syntax highlights contents as perl code.

(end)