@@ -280,4 +280,7 @@ External tool support
 
 * Added jEdit support for [PREFIX-calc] blocks, now syntax highlights contents as perl code.
 
+* Add secure JSON query generation for interface with AJAX widgets. Allows generation of
+  queries vetted by login, with either public access or access gated by session.
+
 (end)
